--- a/style.styl
+++ b/style.styl
@@ -9,3 +9,11 @@ html
     border-radius 10px
     box-shadow 0 0 2px black
     border 1px solid #aaaaaa
+  .btn(id="2")
+    background blue
+    padding 50px
+    display inline-block
+    border-radius 10 px
+    box-shadow 0 0 2px black
+    border 5px solid #aaaaaa
+    
