add disabled button

--- a/index.jade
+++ b/index.jade
@@ -1,4 +1,11 @@
 html
-  link(rel="stylesheet",href="style.styl")
-  h1#title Welcome
-  button.btn Button!
+  body
+    link(rel="stylesheet",href="style.styl")
+
+    h1#title Welcome
+
+    button.btn.default Button!
+    button.btn.disabled Button!
+
+    script.
+  
