--- a/style.styl
+++ b/style.styl
@@ -2,18 +2,18 @@ html
   padding 50px
   font-family "Helvetica"
   width 100%
-  .btn
-    background yellow
-    padding 15px
-    display inline-block
-    border-radius 10px
-    box-shadow 0 0 2px black
-    border 1px solid #aaaaaa
-  .btn(id="2")
-    background blue
-    padding 50px
-    display inline-block
-    border-radius 10 px
-    box-shadow 0 0 2px black
-    border 5px solid #aaaaaa
-    
+
+.btn
+  padding 15px
+  display inline-block
+  border-radius 10px
+  box-shadow 0 2px 5px #ccc
+  border 1px solid #aaaaaa
+
+  &.default
+   background #fafafa
+
+  &.disabled
+   background #ccc
+   box-shadow inset 0 2px 5px #bbb
+   border-color #ccc
