--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,11 @@ html
   body
     link(rel="stylesheet",href="style.styl")
 
+    img(src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-frc3/t1/292421_1848425409109_311178536_n.jpg" height="250" width="250")
+    
     h1#title Welcome
+    h2 I am Nellie A. McCool
+    p Contact me at namccool@gmail.com.
 
     button.btn.default Button!
     button.btn.disabled Button!
