--- a/style.styl
+++ b/style.styl
@@ -1,7 +1,16 @@
 html
+  text-align center
   padding 50px
   font-family "Helvetica"
   width 100%
+  color white
+  
+body
+  background url("http://3.bp.blogspot.com/-d28iwPVuQio/Tx2I9yLwumI/AAAAAAAAI60/9i7jWU93suc/s1600/2008%2Bthe%2Bkingdom-sun%2Babove%2Bclouds.jpg")
+  background-size cover
+  background-position center center
+  background-repeat no-repeat
+  background-attachment fixed
 
 .btn
   padding 15px
